--- a/Homework 6/homework6.tex
+++ b/Homework 6/homework6.tex
@@ -64,7 +64,7 @@
 %\maketitle
 
 \problem{}
-Imagine you had a factorial design in which you were testing if work schedule (none vs. part-time vs. full-time) and course load (part-time vs. full-time) were related to student GPA during an academic quarter. If I told you that this was a balanced design, where each unique combination of conditions (e.g., no work and part-time student status) had 15 participants. What are the df between for each condition, the df for the interaction, the df within (error) and the df total?\\
+Imagine you had a factorial design in which you were testing if work schedule (none vs. part-time vs. full-time) and course load (part-time vs. full-time) were related to student GPA during an academic quarter. If I told you that this was a balanced design, where each unique combination of conditions (e.g., no work and part-time student status) had 15 participants. What are the $df$ between for each condition, the $df$ for the interaction, the $df$ within (error) and the $df$ total?\\
 \\
 Taking work schedule as condition A and course load as condition B, we would have:
 \begin{align*}
@@ -215,7 +215,7 @@ Residual              0.037968  56         NaN           NaN
 Percentage of body mass gain was subjected to a two-way analysis of variance having two levels of biological sex (female, male) and two levels of workout program (light, heavy). All effects were statistically significant
 at the .001 significance level.
 
-The main effect of biological sex yielded an F ratio of $F(1, 56) = 404.2, p < .001,$ indicating that the mean percenteage of body mass gain was significantly greater for males $(M = 0.20, SD = 0.03)$ than for females $(M = 0.07, SD = 0.03)$. The main effect of workout yielded an F ratio of $F(1, 56) = 13.1, p < .001,$ indicating that the mean percenteage of body mass gain was significantly higher for heavy workouts $(M = 0.14, SD = 0.08)$ than for light workouts $(M = 0.12, SD = 0.07)$. However, the interaction effect was also significant, $F(1, 56) = 7.5, p < .001$, indicating that the workout effect was greater in male subjects than in female subjects. The descriptive statistics for these analyses are presented in Table 1. \\
+The main effect of biological sex yielded an F ratio of $F(1, 56) = 404.2, p < .001,$ indicating that the mean percentage of body mass gain was significantly greater for males $(M = 0.20, SD = 0.03)$ than for females $(M = 0.07, SD = 0.03)$. The main effect of workout yielded an F ratio of $F(1, 56) = 13.1, p < .001,$ indicating that the mean percentage of body mass gain was significantly higher for heavy workouts $(M = 0.14, SD = 0.08)$ than for light workouts $(M = 0.12, SD = 0.07)$. However, the interaction effect was also significant, $F(1, 56) = 7.5, p < .001$, indicating that the workout effect was greater in male subjects than in female subjects. The descriptive statistics for these analyses are presented in Table 1. \\
 
 \begin{table}[htdp]
 \begin{center}
