finishing touches hw6

--- a/Homework 6/homework6.tex
+++ b/Homework 6/homework6.tex
@@ -278,7 +278,7 @@ Residual   0.01379  29         NaN           NaN
 
 b. Report your conclusions as you would if you were writing them for a peer reviewed journal. You may use tables to help report your statistical findings if you think it is appropriate. Please make sure your conclusions are in the context of the experimental scenario presented.
 
-An analysis of simple effects showed that workout effect was significant for males, $F(1, 28) = 22.3, p < 0.001$, but not for females, $F(1, 28) = 0.4, p = 0.56$. Therefore, there is no evidence that light workouts differ from heavy workouts for females. An analysis of simple effects showed that the advantage of men over women was significant for both the light workout, $F(1, 27) = 109.2, p < 0.001$, and for the heavy workout, $F(1, 29) = 381.3, p < 0.001$. The descriptive statistics for this analysis are presented in Table 2. From these findings, we can support the fitness magazine's claim that light vs. heavy lifting programs will not cause women to ``bulk up.''
+An analysis of simple effects showed that workout effect was significant for males, $F(1, 28) = 22.3, p < 0.001$, but not for females, $F(1, 28) = 0.4, p = 0.56$. Therefore, there is no evidence that light workouts differ from heavy workouts for females. For males, heavy workouts showed a larger percentage of body mass gained $(M=0.22, SD=0.02)$ than light workouts $(M=0.18, SD=0.03)$. An analysis of simple effects showed that the advantage of men over women was significant for both the light workout, $F(1, 27) = 109.2, p < 0.001$, and for the heavy workout, $F(1, 29) = 381.3, p < 0.001$. The descriptive statistics for this analysis are presented in Table 2. From these findings, we can support the fitness magazine's claim that light vs. heavy lifting programs will not cause women to ``bulk up.''
 
 \begin{table}[htdp]
 \begin{center}
