--- a/Homework 7/homework7.tex
+++ b/Homework 7/homework7.tex
@@ -64,18 +64,38 @@
 %\maketitle
 
 \problem{}
-In your own words describe how RM ANOVA can be used to test for differences between groups, differences between repeated observations, and differences in observations as a function of group membership. These tests have specific names we discussed in lecture.
+In your own words describe how RM ANOVA can be used to test for differences between groups, differences between repeated observations, and differences in observations as a function of group membership. These tests have specific names we discussed in lecture.\\
+
+\begin{enumerate}
+\item Groups Hypothesis (Test of Levels)
+\begin{enumerate}
+\item Do groups score similarly on the collected set of measures?
+\item This test checks if the mean of the groups over all measurement times is the same. This does not mean that all the groups performed the same at each time point, just that their average performance is the same over all time points. Mathematically, this is simple measuring the relative contributions of between-group and within-group contributions to the total sum of squared errors. If the group `levels' are significantly different, then the equal levels null hypothesis is rejected.
+\end{enumerate}
+\item Flatness Hypothesis (Test of Flatness)
+\begin{enumerate}
+\item Is the dependent variable similar across assessments?
+\item This test checks if the difference in the response between assessments (i.e., the slope) is nonzero. The flatness null hypothesis is that the slope between all assessments is zero, and that the results are flat. This is checked for each group, and is effectively a within-subjects test. If the slope is statistically significantly nonzero, then there is a within groups main effect of time.
+\end{enumerate}
+\item Parallelism Hypothesis (Test of Parallelism)
+\begin{enumerate}
+\item Do different groups have parallel profiles?
+\item This test checks if the slope between each set of assessments is the same across all groups. This is equivalent to a one-way ANOVA on the slopes, we are checking that there is no interaction of the within-subjects factor with the between-subjects factor.
+\end{enumerate}
+\end{enumerate}
 
 \problem{}
 Why do we say that in RM ANOVA time is treated as a categorical variable?
 
+RM ANOVA treats time as a categorical factor. Time is considered a set of discrete, fixed conditions in which each subject contributes one outcome variable per time condition. The ANOVA model for describing mean change over time uses as many parameters as there are discrete occasions. This is also known as a saturated means model---the model for time is saturated by using all possible degrees of freedom for differences across conditions of the time variable. The goal of the ANOVA model is not to predict or summarize the pattern of means, but simply to reproduce the observed mean per occasion using fixed effects equal to the number of occasions minus 1 (given that the fixed intercept is already included).
 
 \problem{}
 What is the difference between polynomial contrasts and comparisons of means between different observation periods?
 
-\clearpage
+Polynomial contrast tests can be used to test which level of polynomial (linear, quadratic, cubic) explains the relation under study.
+
 \problem{}
-Researchers were interested in how confidence in students fluctuates from the end of sophomore year through the end of senior year in college. Further, researchers were interested in whether students attended a private (i.e., Harvard, Stanford, and Yale) or public (i.e., UMass – Boston, San Francisco State University, and Southern Conneticut State University) university would influence end-of-year student confidence ratings, and possible trajectories.
+Researchers were interested in how confidence in students fluctuates from the end of sophomore year through the end of senior year in college. Further, researchers were interested in whether students attended a private (i.e., Harvard, Stanford, and Yale) or public (i.e., UMass---Boston, San Francisco State University, and Southern Connecticut State University) university would influence end-of-year student confidence ratings, and possible trajectories.
 
 Use the data set “confidence.csv” to answer the following questions. For your information, t1-t3 indicate time of observation 1-3; i.e., end of sophomore year, end of junior year, and end of senior year, respectively. The variable public indicates whether the student attended a public (public = 1) or private (public = 0) university.\\
 
@@ -144,14 +164,14 @@ from patsy import dmatrix
 p = dmatrix("C(df.Time, Poly())", df)
 poly = pd.DataFrame(p, columns=['Intercept', 'Linear', 'Quadratic'])
 df = pd.concat((df, poly), axis=1)
-print(anova_lm(ols("Observation ~ Time", data=df).fit()))
+print(anova_lm(ols("Observation ~ (Time)", data=df).fit()))
 print(anova_lm(ols("Observation ~ Linear + Quadratic", data=df).fit(), typ=2))
 \end{lstlisting}
 \noindent OUTPUT
 \begin{lstlisting}[language={}]
            df      sum_sq   mean_sq         F    PR(>F)
-Time        1    7.605000  7.605000  4.627049  0.032275
-Residual  298  489.791667  1.643596       NaN       NaN
+C(Time)     2   13.406667  6.703333  4.113494  0.017291
+Residual  297  483.990000  1.629596       NaN       NaN
 
                sum_sq   df         F    PR(>F)
 Linear       7.605000    1  4.666801  0.031551
@@ -228,7 +248,7 @@ Source & $SS$ & $df$ & $F$ & $PR(>F)$ \\
 \hspace{1em} Public      & 16.84 &  2  &  6.9 & $ .001$ \\
 \it{Time} & & & & \\
 \hspace{1em} 1      &  0.81 &  1  &  1.1 & $ .001$\\
-\hspace{1em} 2      &  4.00 &  1  &  2.9 & $<.295$\\
+\hspace{1em} 2      &  4.00 &  1  &  2.9 & $ .295$\\
 \hspace{1em} 3      & 84.64 &  1  & 44.1 & $<.001$\\
 \bottomrule
 \end{tabular}
